--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  height: 100vh;
+  /* background-color: #f2f5f4; */
 }
 
 .App-logo {
